--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,7 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   condition: succeeded()
+  
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: something'
+  condition: succeeded()
